--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   webview_flutter: ^0.3.22+1
   flutter_paginator: ^0.0.6
   cached_network_image: ^2.2.0+1
-  google_fonts: ^1.1.0
+  dio_http_cache: ^0.2.8
+  share: 0.6.4+5
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -69,17 +70,52 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Raleway
+      fonts:
+        - asset: assets/google_fonts/static/Raleway-Thin.ttf
+          weight: 100
+        - asset: assets/google_fonts/static/Raleway-ExtraLight.ttf
+          weight: 200
+        - asset: assets/google_fonts/static/Raleway-Light.ttf
+          weight: 300
+        - asset: assets/google_fonts/static/Raleway-Regular.ttf
+          weight: 400
+        - asset: assets/google_fonts/static/Raleway-Medium.ttf
+          weight: 500
+        - asset: assets/google_fonts/static/Raleway-SemiBold.ttf
+          weight: 600
+        - asset: assets/google_fonts/static/Raleway-Bold.ttf
+          weight: 700
+        - asset: assets/google_fonts/static/Raleway-ExtraBold.ttf
+          weight: 800
+        - asset: assets/google_fonts/static/Raleway-Black.ttf
+          weight: 900
+        - asset: assets/google_fonts/static/Raleway-ThinItalic.ttf
+          weight: 100
+          style: italic
+        - asset: assets/google_fonts/static/Raleway-ExtraLightItalic.ttf
+          weight: 200
+          style: italic 
+        - asset: assets/google_fonts/static/Raleway-LightItalic.ttf
+          weight: 300
+          style: italic 
+        - asset: assets/google_fonts/static/Raleway-Italic.ttf
+          weight: 400
+          style: italic 
+        - asset: assets/google_fonts/static/Raleway-MediumItalic.ttf
+          weight: 500
+          style: italic 
+        - asset: assets/google_fonts/static/Raleway-SemiBoldItalic.ttf
+          weight: 600
+          style: italic 
+        - asset: assets/google_fonts/static/Raleway-BoldItalic.ttf
+          weight: 700
+          style: italic 
+        - asset: assets/google_fonts/static/Raleway-ExtraBoldItalic.ttf
+          weight: 800
+          style: italic 
+        - asset: assets/google_fonts/static/Raleway-BlackItalic.ttf
+          weight: 900
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
